@@ -29,6 +29,7 @@
 21. Don't save queue if string entered in dave dialog but cancel button
     pressed.
 22. Handle case where IceCast list is not GZipped.
+23. Remove SoundCloud support, no longer works due to API changes.
 
 2.4.2
 -----
